--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
+    <header>
+      <img src="conceitode codificação alt="lago formadores">
+    </header>
 
       <div class="texto-principal" >
         <h1>Formadores em Ação - Programação Ensino Médio</h1>
