--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <body>
     <header>
       <img src="conceitode codificação alt="lago formadores">
+      <nav>
+        <ul>
+          <li><a href="">Início</a></li>
+          <li><a href="">Temas</a></li>
+          <li><a href="">Contato</a></li>
+        </ul>
+      </nav>
     </header>
 
       <div class="texto-principal" >
