--- a/temas.html
+++ b/temas.html
@@ -11,9 +11,9 @@
         <img src="conceito-de-codificação" alt="Logo dos formadores">
         <nav>
             <ul>
-                <li>Início</li>
-                <li>Temas</li>
-                <li>Contato</li>
+                <li><a href="">Início</a></li>
+                <li><a href="">Temas</a></li>
+                <li><a href="">Contato</a></li>
             </ul>
         </nav>
     </header>
