--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <img src="conceitode codificação alt="lago formadores">
       <nav>
         <ul>
-          <li><a href="">Início</a></li>
-          <li><a href="">Temas</a></li>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="temas.html">Temas</a></li>
           <li><a href="">Contato</a></li>
         </ul>
       </nav>
