--- a/temas.html
+++ b/temas.html
@@ -12,8 +12,8 @@
         <img src="conceito-de-codificação" alt="Logo dos formadores">
         <nav>
             <ul>
-                <li><a href="">Início</a></li>
-                <li><a href="">Temas</a></li>
+                <li><a href="início.html">Início</a></li>
+                <li><a href="temas.html">Temas</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
         </nav>
