--- a/temas.html
+++ b/temas.html
@@ -12,7 +12,7 @@
         <img src="conceito-de-codificação" alt="Logo dos formadores">
         <nav>
             <ul>
-                <li><a href="início.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="temas.html">Temas</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
